# brief-water-quality-pipeline

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: config.yaml
docs/: rapport.md
notebooks/api/: main.py
notebooks/bronze/: download_data.py  ingestion_geo.py  ingestion_hubeau.py
notebooks/gold/: gold_transform.py
notebooks/quality/: data_quality_check.py
notebooks/silver/: silver_transform.py
tests/: test_bronze.py  test_gold.py  test_silver.py
